syntax="proto3";

option go_package="/pb";

service UserService {
    rpc GetUserById(IdRequest) returns (UserRes);
    rpc ValidateLoginInfo(LoginRequest) returns (LoginRes);
    rpc CreateUser(CreateUserRequest) returns (SuccessRes);
}

message IdRequest {
    uint32 id=1;
}

message UserRes {
    uint32 id=1;
    string mobile=2;
    string nickName=3;
    uint32 role=4;
}

message LoginRequest {
    string mobile=1;
    string password=2;
}

message LoginRes {
    bool result=1;
}

message CreateUserRequest {
    string mobile=1;
    string password=2;
    string nickName=3;
    string salt=4;
}

message SuccessRes {
    bool result=1;
}